--- a/linux-mint/all.html
+++ b/linux-mint/all.html
@@ -18,6 +18,10 @@ pip --proxy proxy.newstar.ru:3128 install --upgrade pip
 
 
 
+Google Chrome
+в ярлык добавить  --password-store=basic
+/usr/bin/google-chrome-stable %U --password-store=basic
+
 
 <p>
     <a href="http://bashrcgenerator.com/">http://bashrcgenerator.com/</a>
