--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -192,6 +192,8 @@
     <q>Path</q>.
 </p>
 <p>После этого добавляем плагин через PackageControl.</p>
+<h3>HexViewer</h3>
+<p>Редактирование шестнадцатиричных и бинарных файлов</p>
 <h2>Автокомлит</h2>
 <h3>Снипеты</h3>
 <h3>Завершения (Completions)</h3>
