--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -154,6 +154,25 @@
     <del>использую</del> из-за отличной работы с атрибутами тегов;</p>
 <h3><strong>View In Browser</strong></h3>
 <p> — открыть файл в браузере;</p>
+<p>Настройка проекта</p>
+<pre>
+{
+    "folders":
+    [
+        {
+            "path": "lab"
+        }
+    ],
+    "settings":
+    {
+        "sublime-view-in-browser":
+        {
+            "baseUrl": "http://lab.local/",
+            "basePath": "/home/iadfeshchm/projects/my/lab/lab/"
+        }
+    }
+}
+</pre>
 <h3>sublime-yii-snippets (Yii Framework Snippets);</h3>
 <h3>SideBarGit</h3>
 <p> —
