--- a/bash/all.html
+++ b/bash/all.html
@@ -269,6 +269,21 @@ $ scp ?
 <pre>user@server ~/some/path/from/user/folder $ pwd
 /home/user/some/path/from/user/folder</pre>
 <h2>Наработки</h2>
+<h3>Изменить заголовки окон программы Sublime Text</h3>
+<pre>
+#!/bin/bash
+pids=$(xdotool search --class --onlyvisible "subl")
+for pid in $pids; do
+    name=$(xdotool getwindowname $pid)
+    if [[ $name == *" Sublime Text"* ]]; then
+        start=`expr index "$name" '\('`
+        finish=`expr index "$name" '\)'`
+        let "len=finish-start-1"
+        newTitle=${name:start:len}
+        xdotool set_window --name "$newTitle" "$pid"
+    fi
+done
+</pre>
 <h3>Копировать большое количество файлов по scp (ssh)</h3>
 <pre class="prettyprint lang-sh">
 #!/bin/bash
