--- a/composer/all.html
+++ b/composer/all.html
@@ -1,32 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Composer</title>
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
-	</head>
-	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<h1 class="text-center">Composer All</h1>
-					<div id="toc"></div>
-
-
-
 <h2>Установка</h2>
 <h3>Windows</h3>
 <h4>Если на локальной машине — XAMPP</h4>
@@ -64,7 +35,8 @@ curl -sS https://getcomposer.org/installer | php
 sudo mv composer.phar /usr/bin/composer
 composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 
-
+<h2>Использование</h2>
+<p>Собственно чтобы использовать пакеты затянутые Composer, необходимо подключить файл <var>autoload.php</var> <code>require_once "vendor/autoload.php";</code>.</p>
 <h3>Install или Update?</h3>
 <p>Запуск composer install сделает следующее:</p>
 <ul>
@@ -81,69 +53,35 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 	<li>Обновит файл composer.lock</li>
 </ul>
 
-
-					<h3>Добавление пакета</h3>
+<h3>Создание собственного пакета</h3>
+<p>Для начала можно создать место для хранения пакета, например, на GitHub. При создании репозитория рекомендуется указать лицензию и файл описания пакета <var>README.md</var>. Далее склонируем репозиторий на локальную машину для создания пакета.</p>
+<p>Создаем <var>composer.json</var> вручную или с помощью команды <code>composer init</code></p>
+<pre>{
+    "name": "zlatov/tree",
+    "description": "Some methods",
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Maksim Zlatov",
+            "email": "zlatov@ya.ru"
+        }
+    ],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Zlatov\\Tree\\": "src/"
+        }
+    }
+}</pre>
+<p>и создаем папочку <var>src</var> и файлы с классами или ...</p>
+<p>Комитимм в репозиторий, например, на GitHub.</p>
+<p>В настройках репозитория (на GitHub) в разделе <q>Integrations &amp; services</q> добавляем сервис <q>Packagist</q>.</p>
+<p>Далее в <a href="https://packagist.org/packages/submit">https://packagist.org/packages/submit</a> указываем ссылку на репозиторий.</p>
+<h3>Добавление пакета</h3>
 <pre>composer require twbs/bootstrap
 composer require twbs/bootstrap:3.3.5
 </pre>
-
-
-				</div>
-			</div>
-		</div>
-		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
-		<!-- Bootstrap JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script type="text/javascript">
-			$(document).ready(function(){
-				$("#toc").append('<p>Содержание:</p>');
-				$("#toc").append('<ul></ul>');
-				$("h2").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h2" + i);
-					$("#toc").children("ul").append("<li><a id='linkh2" + i + "' href='#h2" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h3").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h3" + i);
-					var prevh2 = current.prevAll("h2").first();
-					var j = prevh2.attr("id").substring(2);
-					$("#linkh2"+j).next("ul").append("<li><a id='linkh3" + i + "' href='#h3" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h4").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h4" + i);
-					var prevh3 = current.prevAll("h3").first();
-					var j = prevh3.attr("id").substring(2);
-					alert
-					$("#linkh3"+j).next("ul").append("<li><a id='linkh4" + i + "' href='#h4" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h5").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h5" + i);
-					var prevh4 = current.prevAll("h4").first();
-					var j = prevh4.attr("id").substring(2);
-					$("#linkh4"+j).next("ul").append("<li><a id='linkh5" + i + "' href='#h5" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-				$("h6").each(function(i) {
-					var current = $(this);
-					current.attr("id", "h6" + i);
-					var prevh5 = current.prevAll("h5").first();
-					var j = prevh5.attr("id").substring(2);
-					$("#linkh5"+j).next("ul").append("<li><a id='linkh6" + i + "' href='#h6" +
-						i + "' title='" + current.attr("tagName") + "'>" +
-						current.html() + "</a><ul></ul></li>");
-				});
-			});
-		</script>
-	</body>
-</html>
