--- a/composer/all.html
+++ b/composer/all.html
@@ -84,4 +84,5 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 <h3>Добавление пакета</h3>
 <pre>composer require twbs/bootstrap
 composer require twbs/bootstrap:3.3.5
+composer require zlatov/sql:dev-master (если пакет в разработке - без версий)
 </pre>
