--- a/sql/all.html
+++ b/sql/all.html
@@ -305,6 +305,8 @@ echo &quot;End of the script.&quot;
 </pre>
 
 <h2>Administration</h2>
+<h3>Настроить mysql поможет</h3>
+<p><a href="http://mysqltuner.com/">http://mysqltuner.com/</a></p>
 <h3>Version of mysql</h3>
 <pre class="prettyprint lang-sh">
 mysql -V
