--- a/bash/all.html
+++ b/bash/all.html
@@ -1,6 +1,4 @@
 <h2>Команды</h2>
-<h3>Узнать собственно какой SHELL ипользуется в консоли</h3>
-<pre class="prettyprint lang-sh">echo $SHELL</pre>
 <h3>ls</h3>
 <ul>
     <li><code>-a</code> — выводит список всех файлов каталога, в том числе скрытые файлы. <code>..</code> и <code>.</code> в верхней части списка относятся к каталогу на уровень выше текущего и текущему, соответственно;</li>
@@ -35,6 +33,45 @@
 <p><code>mkdir foo</code> — создает каталог foo в текущем каталоге.</p>
 <p><code>mkdir -p foo/bar/baz qux</code> — создает каталоги foo, qux в текущем каталоге и подкаталоги bar/baz в foo, без вывода предупреждений о несуществовании или существовании оных.</p>
 <p><code>mkdir -m 644 my42</code>.</p>
+<h3>grep</h3>
+<pre class="prettyprint lang-sh">grep 'Hello world' ./example.cpp
+
+# Регистронезависимо:
+grep -i sum ./example.cpp
+
+# Регулярка (но лучше использовать egrep):
+grep -i N[ua]m1 ./example.cpp
+# . - замена любого печатного символа
+# * - отсутствие или повторение символа
+# ^ - начало строки
+# $ - конец строки
+
+# Вывести номер строки (ключ -n)
+grep -i -n hello ./example.cpp
+
+# egrep - с использованием символьных классов POSIX
+egrep -i 'Hel+' ./example.cpp
+</pre>
+<h3>sed</h3>
+<p>(от англ. Stream EDitor) — потоковый текстовый редактор, очень крут, самое краткое:</p>
+<pre class="prettyprint lang-sh">
+# удаление всех пустых строк (исходный файл не изменится):
+sed /^$/d ./example.cpp
+
+# удаление всех пустых строк (исходный файл изменится):
+sed -i /^$/d ./example.cpp
+
+# sed s/искомое_выражение/чем_заменить/имя_файла
+sed s/int/long/ ./example.cpp
+
+# Ключ -r позволяет использовать расширенные регулярные выражения:
+sed -r 's/\/\/.*$//g' ./example2.cpp
+# заменить //.... (комментарии) на пустую строку.
+
+# Подстановка найденного:
+# Заменим функцию foo с параметрами на функцию bar, а функцию foo без параметров не изменять:
+sed -r 's/foo(\([^\)]+\))/bar\1/' ./example2.cpp
+</pre>
 <h3>chmod</h3>
 <p>Права записываются одной строкой сразу для трёх типов пользователей: владелец, группа, остальные. Права могут быть записаны в числовом ([0-7][0-7][0-7]) и в символьном виде ([r-][w-][x-][r-][w-][x-][r-][w-][x-]).</p>
 <p>Права числовым видом <code>644</code> и в символьном виде: <code>rw-r--r--</code>. В двоичном виде эти права выглядели бы так <code>110100100</code>, что означает: владелец имеет право на чтение и запись, а группа и остальные имеют право только на чтение.</p>
@@ -271,6 +308,8 @@ $ scp ?
 <pre>user@server ~/some/path/from/user/folder $ pwd
 /home/user/some/path/from/user/folder</pre>
 <h2>Наработки</h2>
+<h3>Узнать собственно какой SHELL ипользуется в консоли</h3>
+<pre class="prettyprint lang-sh">echo $SHELL</pre>
 <h3>Цветной вывод текста echo color</h3>
 <pre>
 TEXT_BOLD='\033[1m'
@@ -504,5 +543,71 @@ BAAB</pre>
 <pre>
 grep 'win1251' FORUM.SQL
 </pre>
+
+<h4>Сортировка по имени файла в стиле СИ</h4>
+<pre class="prettyprint lang-sh">LANG=C ls migration</pre>
+<h4>Замена с поиском по регулярному выражению</h4>
+<pre class="prettyprint lang-sh">LANG=C ls migration | sed -r 's/\.sql//'</pre>
+<h4>Вывести последнюю строку</h4>
+<pre class="prettyprint lang-sh">LANG=C ls migration | grep  '.sql' | sed -r 's/\.sql//' | tail -1</pre>
+
 <h3>which</h3>
 <p>узнает где бинарник программы</p>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
