--- a/bash/all.html
+++ b/bash/all.html
@@ -308,6 +308,17 @@ $ scp ?
 <pre>user@server ~/some/path/from/user/folder $ pwd
 /home/user/some/path/from/user/folder</pre>
 <h2>Наработки</h2>
+<h3>Функции баш</h3>
+<pre class="prettyprint lang-sh">
+function getDbVersion {
+    echo $(mysql --host=$DBHOST --port=3306 --user="$DBUSER" --database="$DBNAME" -s --execute="
+        SELECT \`value\` as version FROM \`sqlversion\` WHERE name = 'version';
+    ")
+}
+TEMP=$(getDbVersion)
+</pre>
+<h3>Переменные окружения</h3>
+<pre class="prettyprint lang-sh">export MYSQL_PWD="$DBPASS" # вместо --password="$DBPASS"</pre>
 <h3>Узнать собственно какой SHELL ипользуется в консоли</h3>
 <pre class="prettyprint lang-sh">echo $SHELL</pre>
 <h3>Цветной вывод текста echo color</h3>
@@ -553,61 +564,3 @@ grep 'win1251' FORUM.SQL
 
 <h3>which</h3>
 <p>узнает где бинарник программы</p>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
