--- a/sql/all.html
+++ b/sql/all.html
@@ -94,6 +94,32 @@ UPDATE [LOW_PRIORITY] [IGNORE] tbl_name [, tbl_name ...]
 <h3>CREATE TABLE</h3>
 <pre>CREATE TABLE `forum_advt` ()</pre>
 <pre>CREATE TABLE IF NOT EXISTS `forum_advt`</pre>
+<p><strong>Пример</strong></p>
+<pre class="prettyprint lang-sql">
+CREATE TABLE `pub` (
+  `id` INT UNSIGNED NOT NULL AUTO_INCREMENT,
+  `pubsec_id` INT UNSIGNED NOT NULL,
+  `header` VARCHAR(160) NOT NULL,
+  `sid` VARCHAR(160) NOT NULL,
+  `updated_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+  `created_at` TIMESTAMP NOT NULL DEFAULT '1970-01-02 00:00:01',
+  `show` ENUM('true', 'false') CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL DEFAULT 'true',
+  `introtext` TEXT CHARACTER SET utf8 COLLATE utf8_general_ci NULL,
+  `text` MEDIUMTEXT CHARACTER SET utf8 COLLATE utf8_general_ci NULL,
+  `title` VARCHAR(160) CHARACTER SET utf8 COLLATE utf8_general_ci NULL DEFAULT NULL,
+  `description` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NULL DEFAULT NULL,
+  `keywords` VARCHAR(255) CHARACTER SET utf8 COLLATE utf8_general_ci NULL DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE INDEX `uq_pub_sid` (`sid` ASC),
+  UNIQUE INDEX `uq_pub_header` (`header` ASC),
+  KEY `ix_pub_pubsecid` (`pubsec_id`),
+  CONSTRAINT `fk_pub_pubsecid` FOREIGN KEY (`pubsec_id`) REFERENCES `pubsec` (`id`) ON UPDATE CASCADE
+)
+ENGINE InnoDB
+AUTO_INCREMENT 1
+DEFAULT CHARACTER SET utf8
+COLLATE utf8_general_ci;
+</pre>
 <h3>TRUNCATE</h3>
 <p>— удаляет и воссоздает таблицу, операция является нетранзакционной, не возвращает количество удаленных строк.</p>
 <pre>TRUNCATE TABLE table_name</pre>
@@ -384,6 +410,12 @@ SHOW GRANTS FOR 'userLogin'@'localhost';
 <pre class="prettyprint lang-sql">
 SET SQL_SAFE_UPDATES = 0;
 SET SQL_SAFE_UPDATES = 1;
+</pre>
+<h3>mysql: [Warning] Using a password on the command line interface can be insecure.</h3>
+<p><strong>Способ 1</strong>: в начале скрипта в переменные окружения добавить переменную <var>MYSQL_PWD</var>:</p>
+<pre class="prettyprint lang-sh">
+# Вместо использования --password="$DBPASS" в утилите mysql выполните:
+export MYSQL_PWD="$DBPASS" 
 </pre>
 <h2>Наработки</h2>
 <h3>Обновить колонку таблицы из другой таблицы</h3>
