--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -36,29 +36,32 @@
 <h3>Список</h3>
 <ul>
     <li>
-        <kbd>Ctrl + P</kbd> - </li>
+        <kbd>Ctrl + P</kbd> - список файлов проекта (с поиском) и открытие выбранного;</li>
     <li>
-        <kbd>Ctrl + Shift + P</kbd> - </li>
+        <kbd>Ctrl + Shift + P</kbd> - вывести списко снипетов и команд всех плагинов с поиском, а так же сменить подветку синтаксиса текущего файла;</li>
     <li>
-        <kbd>Ctrl + Alt + P</kbd> - а так же сменить тип файла (подветку синтаксиса);</li>
+        <kbd>Ctrl + Alt + P</kbd> - переключиться на другой проект (с поиском);</li>
     <li>
-        <kbd>Ctrl + R</kbd> - </li>
+        <kbd>Ctrl + R</kbd> - список методов в файле и переход по ним (с поиском)</li>
     <li>
-        <kbd>Ctrl + G</kbd> - </li>
+        <kbd>Ctrl + G</kbd> - переход к строке по номеру</li>
     <li>
         <kbd>Alt + -</kbd> - переход к предыдущему месту редактирования;</li>
     <li>
         <kbd>Ctrl + Alt + LMB</kbd> - чтобы свернуть все папки в сайдбаре сублима достаточно кликнуть ЛКМ по корневой папке с зажатым Ctrl и Alt (в Windows только с Alt).</li>
     <li>
-        <kbd>Ctrl + D</kbd> - </li>
+        <kbd>Ctrl + D</kbd> - выделить текущее слово или если уже выделены символы, то выделить следующий такой же набор символов</li>
     <li>
         <kbd>Ctrl + Shift + D</kbd> - </li>
     <li>
-        <kbd>Ctrl + Shift + G</kbd> - </li>
+        <kbd>Ctrl + Shift + G</kbd> - окружить выделенное новым HTML тегом</li>
     <li>
-        <kbd>Ctrl + Shift + A</kbd> - </li>
+        <kbd>Ctrl + Shift + A</kbd> - выделить все в текущем HTML теге</li>
     <li>
         <kbd>Ctrl + J</kbd> - добавить следующую строку (с вычетом отступа следующей строки) к текущей через пробел</li>
+    <li>
+        <kbd>Ctrl + Shift + Space</kbd> - всплывающая подсказка с DocBlock если поствить курсор в начало параметров метода (сразу после открывающей круглой скобки)
+    </li>
 </ul>
 <h2>Плагины</h2>
 <h3><strong>Package Control</strong></h3>
@@ -198,7 +201,7 @@
 <pre>
 "terminal": "C:\\cygwin64\\bin\\mintty.exe",
 "parameters": ["-i", "C:\\cygwin64\\Cygwin-Terminal.ico"],</pre>
-<h3><strong>DocBlockr</strong></h3>
+<h3><strong>DocBlock</strong></h3>
 <p> – документирование <code>/**</code>
     <kbd>Tab</kbd>.</p>
 <h3><strong>GitGutter</strong></h3>
