--- a/bash/all.html
+++ b/bash/all.html
@@ -308,6 +308,15 @@ $ scp ?
 <pre>user@server ~/some/path/from/user/folder $ pwd
 /home/user/some/path/from/user/folder</pre>
 <h2>Наработки</h2>
+<h3>Убить процесс</h3>
+<p><code class="copyToClipboard">kill -9 process_id</code></p>
+<h3>Список процессов</h3>
+<p>
+    <code class="copyToClipboard">ps aux</code>
+</p>
+<p>
+    <code class="copyToClipboard">ps aux | grep process_name</code>
+</p>
 <h3>Функции баш</h3>
 <pre class="prettyprint lang-sh">
 function getDbVersion {
