--- a/ruby/all.html
+++ b/ruby/all.html
@@ -13,6 +13,12 @@
 <p><code class="copyToClipboard">gem list</code></p>
 <p><code class="copyToClipboard">gem install bundler</code></p>
 <p><code class="copyToClipboard">gem install rails</code></p>
+<p><code>bundle</code> - установить пакеты</p>
+<p>Ошибка <var>bundle</var> <q>An error occurred while installing therubyracer (0.12.2), and Bundler cannot continue</q>. Помогло:</p>
+<pre class="copyToClipboard">
+sudo apt-get install g++
+sudo apt-get install build-essential
+</pre>
 
 <h2>rails - фреймворк ruby</h2>
 <p><code class="copyToClipboard">rails new testApp</code></p>
