--- a/linux-mint/all.html
+++ b/linux-mint/all.html
@@ -103,7 +103,10 @@ EndSection</pre> Сочетания по умолчанию лежат в фай
     <kbd>alt+F1</kbd>),
     <kbd>ctrl+alt+down</kbd> (на
     <kbd>ctrl+alt+tab</kbd>) для удобной работы в SublimeText3</p>
-<h2>Programms settings</h2>
+<h2>Дополнительное программное обеспечение и их настройка</h2>
+<h3>VirtualBox</h3>
+<p>Отключить захват клавиатуры чтобы быстро переключаться с поммощью <kbd>Alt + Tab</kbd> из винды в линукс, а не по окнам винды:</p>
+<p><q>Файл</q> → <q>Настройки</q> → <q>Ввод</q> → <q>Автозахват клавиатуры</q> (убрать галку)</p>
 <h3>Terminal</h3>
 <ul>
     <li>Размер терминала по умолчанию - сделай под себя</li>
